<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易编辑</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="open_directory_fail">打开目录失败</string>
    <string name="open_file_fail">打开文件失败</string>
    <string name="save_file_fail">保存失败</string>
    <string name="save_file_succeed">保存成功</string>
	
    <string name="menu_add_method">添加方法</string>
    <string name="menu_add_local">添加局部变量</string>
    <string name="menu_new">新建</string>
    <string name="menu_save">保存</string>
    <string name="menu_settings">设置</string>
    <string name="color_settings">颜色设置</string>
    <string name="vibrator_settings">震动设置</string>
    
    <string name="open_vibrator">开启</string>
    <string name="close_vibrator">关闭</string>
    
    <string name="update_hint_fail">检查更新失败</string>
    <string name="update_hint_no_update">已是最新版本</string>
	<string name="update_update">更新</string>
	<string name="update_now">立即更新</string>
	<string name="update_later">稍后更新</string>
	
	<string name="font_size">字体大小</string>
	<string name="font_code">字符编码</string>
	<string name="cursor_color">光标颜色</string>
	<string name="class_field_head_bg_color">类与成员表头背景</string>
	<string name="method_param_head_bg_color">方法与参数表头背景</string>
	<string name="local_head_bg_color">变量表头背景</string>
	<string name="class_name_color">类名颜色</string>
	<string name="field_name_color">成员名颜色</string>
	<string name="method_name_color">方法名颜色</string>
	<string name="param_name_color">参数名颜色</string>
	<string name="local_name_color">变量名颜色</string>
	<string name="type_color">类型名颜色</string>
	<string name="explain_color">备注颜色</string>
	<string name="select_grid_color">打钩颜色</string>
</resources>
