<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/config_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title_bar"
            android:gravity="center"
            android:text="@string/menu_settings"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/config_tv_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_selector"
            android:clickable="true"
            android:gravity="center"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/config_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="4dp"
        android:background="@drawable/groud_bg"
        android:padding="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_size"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/config_tv_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/config_text_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/config_text_size"
        android:layout_marginTop="4dp"
        android:background="@drawable/groud_bg"
        android:padding="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_code"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/config_tv_font_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="20sp" />
    </RelativeLayout>
	 <RelativeLayout
        android:id="@+id/config_color_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/config_text_code"
        android:layout_marginTop="4dp"
        android:background="@drawable/groud_bg"
        android:padding="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_settings"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/config_tv_color_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=">"
            android:textSize="20sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/config_vibrator_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/config_color_settings"
        android:layout_marginTop="4dp"
        android:background="@drawable/groud_bg"
        android:padding="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrator_settings"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/config_tv_vibrator_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/config_btn_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="恢复默认设置" />
	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FF0000FF"
        android:text="QQ群：134198921" />
</RelativeLayout>